--- a/style.css
+++ b/style.css
@@ -15,3 +15,60 @@ body {
     font-family: var(--fontFamily);
     font-size: var(--fontSize);
 }
+.button {
+    padding: 10px 30px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    background: var(--accents);
+    border-radius: 30px;
+    text-decoration: none;
+    color: var(--white);
+}
+.button:hover {
+    background: #e3960a;
+    text-decoration: none;
+    color: var(--white);
+    transition: var(--transition);
+}
+/***************
+nav
+***************/
+.navbar-brand {
+    font-size: 3rem;
+    font-weight: 800;
+    letter-spacing: 2px;
+    color: var(--white);
+}
+.navbar-brand:hover {
+    transition: var(--transition);
+    color: var(--accents);
+}
+.nav-link {
+    color: var(--white);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+.nav-link:hover {
+    transition: var(--transition);
+    color: var(--accents);
+}
+/***************
+header
+***************/
+header {
+    background: linear-gradient(45deg,var(--primary), var(--secondary));
+    height: 90vh;
+}
+header .row {
+    height: 90vh;
+}
+header i {
+    background: var(--accents);
+    padding: 15px;
+    font-size: 2rem;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+header h1 {
+    font-size: 3rem;
+}
