--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --white: #fff;
     --text: #878787;
     --gray: #1f242a;
+    --shadow: #d8d8d8;
     --fontFamily: 'Open Sans', sans-serif;
     --fontSize: 16px;
     --transition: .4s ease;
@@ -30,6 +31,36 @@ body {
     color: var(--white);
     transition: var(--transition);
 }
+.violetBtn {
+    background: var(--secondary);
+}
+.py-5 {
+    padding: 80px 0 !important;
+}
+h2 {
+    font-size: 2.5rem;
+    text-align: center;
+}
+.underline {
+    width: 10%;
+    height: 6px;
+    margin: 30px auto;
+    display: flex;
+    justify-content: space-between;
+}
+.line1, .line2, .line3 {
+    background: var(--secondary);
+    border-radius: 5px;
+}
+.line1 {
+    flex: 0 0 58%;
+}
+.line2 {
+    flex: 0 0 28%;
+}
+.line3 {
+    flex: 0 0 8%;
+}
 /***************
 nav
 ***************/
@@ -51,6 +82,7 @@ nav
 .nav-link:hover {
     transition: var(--transition);
     color: var(--accents);
+    text-shadow: 0 0 2px var(--primary);
 }
 /***************
 header
@@ -75,3 +107,54 @@ header
 .mainHeader h1 {
     font-size: 3rem;
 }
+/***************
+uvod
+***************/
+.uvod {
+    padding: 50px 0 100px;
+}
+.uvod .box {
+    box-shadow: 0 20px 30px var(--shadow);
+    padding: 50px;
+    min-height: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 15px;
+    overflow: hidden;
+}
+.uvod .box:hover {
+    background: linear-gradient(120deg, var(--primary), var(--secondary));
+    color: var(--white);
+    transition: var(--transition);
+    box-shadow: 0 20px 30px var(--text);
+}
+.uvod i {
+    font-size: 2.5rem;
+    color: var(--gray);
+    width: 90px;
+    height: 90px;
+    line-height: 90px;
+    text-align: center;
+    border-radius: 50%;
+    background: var(--white);
+}
+.uvod .box:hover i {
+    box-shadow: 0 10px 20px var(--black);
+}
+.uvod h3 {
+    margin: 30px 0;
+}
+.uvod .col-md-4 {
+    flex: 0 0 30%;
+}
+.uvod .prviRed {
+    margin-bottom: 80px;
+}
+
+
+
+
+
+
+
